[package]
name = "myrust"
version = "0.1.0"
edition = "2018"



[lib]
name = "my_rust"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.pyo3]
version = "0.16.2"
features = ["extension-module"]

[dependencies]
sqlhelper = { path = "../sqlhelper" }
